description: Password strength test
---
- expectVisible: "Sign In"
- tapOn: "Sign In"
- expectVisible: "Email"
- tapOn: "Email"
- inputText: "asriel@example.com"
- tapOn: "Password"
- inputText: "123qweASD"
- tapOn: "Sign In"
- expectVisible: "Password is weak"
