description: Sign in with valid email password test
---
- expectVisible: "Sign In"
- tapOn: "Sign In"
- expectVisible: "Email"
- tapOn: "Email"
- inputText: "asriel@example.com"
- expectVisible: "Password"
- tapOn: "Password"
- inputText: "ASRIEL123@#$qaz"
- tapOn: "Sign In"
- expectVisible: "Hello"
