description: Sign up with valid email and password tests
---
# Go to Sign up screen
- expectVisible: "Sign Up"
- tapOn: "Sign Up"
- expectVisible: "Email"
# Type valid email
- tapOn: "Email"
- inputText: "user0987911341@example.com"
# Type username
- tapOn: "Username"
- inputText: "user09879"
# Type valid password
- tapOn: "Password"
- inputText: "user1USER1!@#"
#  Attempt to Sign up
- tapOn: "Sign Up"
# Check redirect to Sign In screen
- expectNotVisible: "Forgot password?"